--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "async": "^1.5.0",
     "bunyan": "^1.5.1",
-    "co": "^4.6.0"
+    "co": "^4.6.0",
+    "node-uuid": "^1.4.3"
   },
   "devDependencies": {
     "mocha": "^2.3.3"
