--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "metagame.js",
   "dependencies": {
     "async": "^1.5.0",
+    "bluebird": "^3.0.5",
     "bunyan": "^1.5.1",
     "co": "^4.6.0",
     "co-mongo": "0.0.2",
+    "mongodb": "^2.0.48",
     "node-uuid": "^1.4.3"
   },
   "devDependencies": {
