--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ws": "^0.8.0"
   },
   "devDependencies": {
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "nodemon": "^1.8.1"
   },
   "scripts": {
     "test": "mocha",
