Boot logging improvements, switched to "npm start"

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "test": "mocha",
-    "debug": "nodemon | bunyan"
+    "start": "nodemon | bunyan"
   },
   "author": "Ruan Pearce-Authers",
   "license": "ISC"
