ctrl+shift+b to launch nodemon in vs code

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,11 +10,14 @@
 	"version": "0.1.0",
 	"command": "npm",
 	"isShellCommand": true,
+	"showOutput": "always",
 	"tasks": [
 		{
-			"taskName": "test",
-			"showOutput": "always",
-			"args": [ "test" ]
+			"taskName": "test"
+		},
+		{
+			"taskName": "start",
+			"isBuildCommand": true
 		}
 	]
 }
