Explicitly tag "npm test" as a VS code test command

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,8 @@
 	"showOutput": "always",
 	"tasks": [
 		{
-			"taskName": "test"
+			"taskName": "test",
+			"isTestCommand": true
 		},
 		{
 			"taskName": "start",
