--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "co": "^4.6.0",
     "mongodb": "^2.0.48",
     "node-uuid": "^1.4.3",
+    "redis": "^2.4.2",
     "ws": "^0.8.0"
   },
   "devDependencies": {
