--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
 language: node_js
 services:
- - mongodb
- - redis
+  - mongodb
+  - redis
 node_js:
- - "5.1"
- - "5.0"
- - "4.2"
+  - "5.1"
+  - "5.0"
+  - "4.2"
+compiler: clang-3.6
+env:
+  - CXX=clang-3.6
+addons:
+  apt:
+    sources:
+      - llvm-toolchain-precise-3.6
+      - ubuntu-toolchain-r-test
+    packages:
+      - clang-3.6
+      - g++-4.8
