--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "mocha": "^2.3.3",
+    "mocha-generators": "^1.2.0",
     "nodemon": "^1.8.1"
   },
   "scripts": {
