--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bluebird": "^3.0.5",
     "bunyan": "^1.5.1",
     "co": "^4.6.0",
+    "geoip-lite": "^1.1.6",
     "mongodb": "^2.0.48",
     "node-uuid": "^1.4.3",
     "redis": "^2.4.2",
