--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,7 @@
 environment:
   matrix:
+  - nodejs_version: "5.4"
+  - nodejs_version: "5.3"
   - nodejs_version: "5.2"
   - nodejs_version: "5.1"
   - nodejs_version: "5.0"
