--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.exclude": {
 		"**/.git": true,
 		"**/.DS_Store": true,
-		"node_modules/": true
+		"node_modules/": true,
+		"typings/": true,
+    "keys/": true
 	}
 }
