Force VS code to use tabs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
 		"**/.DS_Store": true,
 		"node_modules/": true,
 		"typings/": true,
-    "keys/": true
-	}
+		"keys/": true
+	},
+	"editor.insertSpaces": false
 }
