--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,7 @@
 	"files.exclude": {
 		"**/.git": true,
 		"**/.DS_Store": true,
-		"node_modules/": true,
-		"keys/": true
+		"node_modules/": true
 	},
 	"editor.insertSpaces": false
 }
