--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
 	"files.exclude": {
 		"**/.git": true,
 		"**/.DS_Store": true,
-		"node_modules/": true
+		"node_modules/": true,
+		"**/npm-debug.log": true
 	},
 	"editor.insertSpaces": false
 }
