--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "geoip-lite": "^1.1.6",
     "jsonschema": "^1.0.3",
     "mongodb": "^2.0.48",
-    "node-uuid": "^1.4.7",
     "redis": "^2.4.2",
+    "uuid": "^3.0.0",
     "ws": "^0.8.0"
   },
   "devDependencies": {
